--- a/odecopack/locale/en/LC_MESSAGES/django.po
+++ b/odecopack/locale/en/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-28 12:46-0500\n"
-"PO-Revision-Date: 2017-12-28 12:46-0456\n"
+"PO-Revision-Date: 2017-12-29 13:53-0456\n"
 "Last-Translator: b'  <fabio.garcia.sanchez@gmail.com>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -62,7 +62,7 @@ msgid ""
 "                        "
 msgstr ""
 "\n"
-"Texto en ingles de políticas de datos personales para colocar en ingles"
+"ODECOPACK SAS informs you that the personal data that we collect throught this form will be manage in safe and trusted way according to the colombian law 1581 from 2012 about data protecction."
 
 #: templates/web/base/contactenos.html:62 templates/web/base/footer.html:94
 msgid "Enviar"
@@ -86,7 +86,7 @@ msgid ""
 "                                    "
 msgstr ""
 "\n"
-"Texto en ingles de políticas de datos personales para colocar en ingles"
+"ODECOPACK SAS informs you that the personal data that we collect throught this form will be manage in safe and trusted way according to the colombian law 1581 from 2012 about data protecction."
 
 #: templates/web/base/menu.html:25
 msgid "SOLUCIONES"
