--- a/odecopack/locale/en/LC_MESSAGES/django.po
+++ b/odecopack/locale/en/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-12-28 12:46-0500\n"
-"PO-Revision-Date: 2017-12-29 13:53-0456\n"
+"POT-Creation-Date: 2018-01-04 08:57-0500\n"
+"PO-Revision-Date: 2018-01-03 10:42-0456\n"
 "Last-Translator: b'  <fabio.garcia.sanchez@gmail.com>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -32,7 +32,7 @@ msgid "CONTÁCTENOS"
 msgstr "CONTACT"
 
 #: templates/web/base/contactenos.html:25 templates/web/base/footer.html:52
-#: web_soluciones/models.py:24
+#: web_soluciones/models.py:46
 msgid "Nombre"
 msgstr "Name"
 
@@ -56,13 +56,18 @@ msgstr "message"
 #: templates/web/base/contactenos.html:54
 msgid ""
 "\n"
-"                            ODECOPACK SAS le informa que los datos personales que se recolectan\n"
-"                            a través de este formulario serán tratados de manera segura y confiable de acuerdo\n"
-"                            con nuestras políticas y acorde a la Ley 1581 de 2012 sobre protección de Datos.\n"
+"                            ODECOPACK SAS le informa que los datos "
+"personales que se recolectan\n"
+"                            a través de este formulario serán tratados de "
+"manera segura y confiable de acuerdo\n"
+"                            con nuestras políticas y acorde a la Ley 1581 de "
+"2012 sobre protección de Datos.\n"
 "                        "
 msgstr ""
 "\n"
-"ODECOPACK SAS informs you that the personal data that we collect throught this form will be manage in safe and trusted way according to the colombian law 1581 from 2012 about data protecction."
+"ODECOPACK SAS informs you that the personal data that we collect throught "
+"this form will be manage in safe and trusted way according to the colombian "
+"law 1581 from 2012 about data protecction."
 
 #: templates/web/base/contactenos.html:62 templates/web/base/footer.html:94
 msgid "Enviar"
@@ -79,14 +84,19 @@ msgstr "Contact Form"
 #: templates/web/base/footer.html:84
 msgid ""
 "\n"
-"                                        ODECOPACK SAS le informa que los datos personales que se recolectan\n"
-"                                        a través de este formulario serán tratados de manera segura y confiable de\n"
+"                                        ODECOPACK SAS le informa que los "
+"datos personales que se recolectan\n"
+"                                        a través de este formulario serán "
+"tratados de manera segura y confiable de\n"
 "                                        acuerdo\n"
-"                                        con nuestras políticas y acorde a la Ley 1581 de 2012 sobre protección de Datos.\n"
+"                                        con nuestras políticas y acorde a la "
+"Ley 1581 de 2012 sobre protección de Datos.\n"
 "                                    "
 msgstr ""
 "\n"
-"ODECOPACK SAS informs you that the personal data that we collect throught this form will be manage in safe and trusted way according to the colombian law 1581 from 2012 about data protecction."
+"ODECOPACK SAS informs you that the personal data that we collect throught "
+"this form will be manage in safe and trusted way according to the colombian "
+"law 1581 from 2012 about data protecction."
 
 #: templates/web/base/menu.html:25
 msgid "SOLUCIONES"
@@ -97,26 +107,59 @@ msgid "CLIENTES"
 msgstr "CUSTOMERS"
 
 #: templates/web/base/menu.html:38
+#: templates/web/casos_exito/casos_exito_list.html:5
 msgid "CASOS ÉXITO"
 msgstr "SUCCESS STORIES"
+
+#: templates/web/casos_exito/caso_exito_item_detail.html:36
+#: templates/web/casos_exito/caso_exito_item_detail.html:87
+msgid "Año"
+msgstr "Year"
+
+#: templates/web/casos_exito/caso_exito_item_detail.html:37
+#: templates/web/casos_exito/caso_exito_item_detail.html:88
+msgid "Mes"
+msgstr "Month"
+
+#: templates/web/casos_exito/caso_exito_item_detail.html:39
+#: templates/web/casos_exito/caso_exito_item_detail.html:90
+msgid "Industria"
+msgstr "Industry"
+
+#: templates/web/casos_exito/caso_exito_item_detail.html:41
+#: templates/web/casos_exito/caso_exito_item_detail.html:92
+msgid "Cliente"
+msgstr "Client"
+
+#: templates/web/casos_exito/caso_exito_item_detail.html:49
+#: templates/web/soluciones/item.html:97
+msgid "Ver más"
+msgstr "More"
+
+#: templates/web/casos_exito/caso_exito_item_detail.html:112
+msgid "Testimonios"
+msgstr "Testimonies"
+
+#: templates/web/casos_exito/caso_exito_item_detail.html:150
+#: templates/web/soluciones/item.html:144
+msgid "Galería"
+msgstr "Gallery"
+
+#: templates/web/casos_exito/caso_exito_item_detail.html:195
+#: templates/web/soluciones/item.html:189
+msgid "Videos"
+msgstr "Videos"
+
+#: templates/web/casos_exito/caso_exito_item_detail.html:213
+#: templates/web/soluciones/item.html:223
+msgid "Cerrar"
+msgstr "Close"
 
 #: templates/web/empresa.html:166
 msgid "NUESTROS ALIADOS"
 msgstr "OUR PARTNERS"
 
-#: templates/web/soluciones/item.html:97
-msgid "Ver más"
-msgstr "More"
-
-#: templates/web/soluciones/item.html:136
-msgid "Galería"
-msgstr "Gallery"
-
-#: templates/web/soluciones/item.html:181
-msgid "Videos"
-msgstr "Videos"
-
-#: templates/web/soluciones/item.html:198
+#: templates/web/soluciones/item.html:206
 msgid "Recursos"
 msgstr "Resources"
 
