--- a/odecopack/locale/en/LC_MESSAGES/django.po
+++ b/odecopack/locale/en/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-09 10:55-0500\n"
-"PO-Revision-Date: 2018-01-09 09:45-0456\n"
+"POT-Creation-Date: 2018-08-24 10:57-0500\n"
+"PO-Revision-Date: 2018-08-24 11:11-0456\n"
 "Last-Translator: b'  <fabio.garcia.sanchez@gmail.com>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -56,20 +56,38 @@ msgstr "message"
 #: templates/web/base/contactenos.html:54
 msgid ""
 "\n"
-"                            ODECOPACK SAS le informa que los datos "
-"personales que se recolectan\n"
-"                            a través de este formulario serán tratados de "
-"manera segura y confiable de acuerdo\n"
-"                            con nuestras políticas y acorde a la Ley 1581 de "
-"2012 sobre protección de Datos.\n"
+"                            ODECOPACK SAS le informa que los datos personales que se recolectan\n"
+"                            a través de este formulario serán tratados de manera segura y confiable de acuerdo\n"
+"                            con nuestras políticas y acorde a la Ley 1581 de 2012 sobre protección de Datos.\n"
 "                        "
 msgstr ""
 "\n"
-"ODECOPACK SAS informs you that the personal data that we collect throught "
-"this form will be manage in safe and trusted way according to the colombian "
-"law 1581 from 2012 about data protecction."
+"ODECOPACK SAS informs you that the personal data that we collect throught this form will be manage in safe and trusted way according to the colombian law 1581 from 2012 about data protecction."
 
-#: templates/web/base/contactenos.html:62 templates/web/base/footer.html:94
+#: templates/web/base/contactenos.html:60
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "                                        ODECOPACK SAS le informa que los datos personales que se recolectan\n"
+#| "                                        a través de este formulario serán tratados de manera segura y confiable de\n"
+#| "                                        acuerdo\n"
+#| "                                        con nuestras políticas y acorde a la Ley 1581 de 2012 sobre protección de Datos.\n"
+#| "                                    "
+msgid ""
+"\n"
+"                                En caso de que desee RETIRAR o MODIFICAR su información de nuestras bases de\n"
+"                                datos por\n"
+"                                favor\n"
+"                                envíe su solicitud al correo:  protecciondatos@odecopack.com , o comuníquese\n"
+"                                al\n"
+"                                teléfono:\n"
+"                                4856565\n"
+"                            "
+msgstr ""
+"\n"
+"ODECOPACK SAS informs you that the personal data that we collect throught this form will be manage in safe and trusted way according to the colombian law 1581 from 2012 about data protecction."
+
+#: templates/web/base/contactenos.html:73 templates/web/base/footer.html:101
 msgid "Enviar"
 msgstr "send"
 
@@ -84,19 +102,25 @@ msgstr "Contact Form"
 #: templates/web/base/footer.html:84
 msgid ""
 "\n"
-"                                        ODECOPACK SAS le informa que los "
-"datos personales que se recolectan\n"
-"                                        a través de este formulario serán "
-"tratados de manera segura y confiable de\n"
+"                                        ODECOPACK SAS le informa que los datos personales que se recolectan\n"
+"                                        a través de este formulario serán tratados de manera segura y confiable de\n"
 "                                        acuerdo\n"
-"                                        con nuestras políticas y acorde a la "
-"Ley 1581 de 2012 sobre protección de Datos.\n"
+"                                        con nuestras políticas y acorde a la Ley 1581 de 2012 sobre protección de Datos.\n"
 "                                    "
 msgstr ""
 "\n"
-"ODECOPACK SAS informs you that the personal data that we collect throught "
-"this form will be manage in safe and trusted way according to the colombian "
-"law 1581 from 2012 about data protecction."
+"ODECOPACK SAS informs you that the personal data that we collect throught this form will be manage in safe and trusted way according to the colombian law 1581 from 2012 about data protecction."
+
+#: templates/web/base/footer.html:91
+msgid ""
+"\n"
+"                                            En caso de que desee RETIRAR o MODIFICAR su información de nuestras bases de\n"
+"                                            datos por favor envíe su solicitud al correo:  protecciondatos@odecopack.com , o comuníquese al\n"
+"                                            teléfono: 4856565\n"
+"                                        "
+msgstr ""
+"\n"
+"In case you wish to delete or update your data in our databases, you can either sent your request to protecciondatos@odecopack.com or communicate to 4856565."
 
 #: templates/web/base/menu.html:25
 msgid "SOLUCIONES"
@@ -107,7 +131,7 @@ msgid "CLIENTES"
 msgstr "CUSTOMERS"
 
 #: templates/web/base/menu.html:38
-#: templates/web/casos_exito/casos_exito_list.html:5
+#: templates/web/casos_exito/casos_exito_list.html:6
 msgid "CASOS ÉXITO"
 msgstr "SUCCESS STORIES"
 
@@ -155,7 +179,7 @@ msgstr "Videos"
 msgid "Cerrar"
 msgstr "Close"
 
-#: templates/web/casos_exito/casos_exito_list.html:11
+#: templates/web/casos_exito/casos_exito_list.html:12
 msgid "Casos de Éxito"
 msgstr "Success Stories"
 
